<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rps1"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Play_poke" >
    
     <ImageButton
         android:id="@+id/Stone"
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:contentDescription="@string/stone"
         android:maxHeight="50dp"
         android:maxWidth="50dp"
         android:scaleType="centerCrop"
         android:src="@drawable/rps11" />

    <ImageButton
        android:id="@+id/Scissor"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:contentDescription="@string/scissor"
        android:maxHeight="50dp"
        android:maxWidth="50dp"
        android:scaleType="centerCrop"
        android:src="@drawable/rps13" />

    <ImageButton
        android:id="@+id/Paper"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/paper"
        android:maxHeight="50dp"
        android:maxWidth="50dp"
        android:scaleType="centerCrop"
        android:src="@drawable/rps12" />

    <ImageButton
        android:id="@+id/imageButton1"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/stonecp"
        android:scaleType="centerCrop"
        android:src="@drawable/rps11" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/scissorcp"
        android:scaleType="centerCrop"
        android:src="@drawable/rps13" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/papercp"
        android:scaleType="centerCrop"
        android:src="@drawable/rps12" />

    <ImageView
        android:id="@+id/Selectcp"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignLeft="@+id/imageButton3"
        android:layout_below="@+id/imageButton3"
        android:contentDescription="@string/selectcp"
        android:scaleType="centerCrop"
        android:src="@drawable/rps15" />

    <ImageView
        android:id="@+id/Select"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_above="@+id/Paper"
        android:layout_alignLeft="@+id/Paper"
        android:contentDescription="@string/select"
        android:scaleType="centerCrop"
        android:src="@drawable/rps15" />

    <TextView
        android:id="@+id/expression"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/empty"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        android:visibility="invisible" />

</RelativeLayout>
