<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/rps1"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Mainmenu" >

    <TextView
        android:id="@+id/mm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/main_menu"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#ff0000"
        android:textSize="45sp"
        android:textStyle="bold|italic" />

    <Button
        android:id="@+id/rps"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/mm"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:background="#000000"
        android:text="@string/rock_paper_scissor"
        android:textColor="#00ff00"
        android:textSize="30sp" />

    <Button
        android:id="@+id/swg"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignLeft="@+id/rps"
        android:layout_below="@+id/rps"
        android:layout_marginTop="10dp"
        android:background="#000000"
        android:text="@string/swg"
        android:textColor="#00ff00"
        android:textSize="30sp" />

    <Button
        android:id="@+id/poke"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignLeft="@+id/swg"
        android:layout_below="@+id/swg"
        android:layout_marginTop="10dp"
        android:background="#000000"
        android:text="@string/poke"
        android:textColor="#00ff00"
        android:textSize="30sp" />

</RelativeLayout>
